<resources>
    <string name="app_name">远程遥控车</string>
    <string name="hint_server_with_port">服务器地址</string>
    <string name="label_quality">默认画质</string>
    <string name="btn_enter">进入遥控</string>
    <string name="status_disconnect">未连接</string>
    <string name="status_connect">已连接</string>
    <string name="quality_hd">高清</string>
    <string name="quality_smooth">流畅</string>
    <string name="btn_disconnect">断开</string>
    <string name="btn_connect">连接</string>
    <string name="light_off">车灯:关</string>
    <string name="light_low">车灯:弱</string>
    <string name="light_mid">车灯:中</string>
    <string name="light_high">车灯:强</string>
    <string name="btn_record_start">录像</string>
    <string name="btn_record_stop">停止</string>
    <string name="hint_sn">设备序列号</string>
    <string name="cd_audio_off">语音对讲：关闭</string>
    <string name="cd_audio_on">语音对讲：开启</string>
    <string name="cd_mic_off">麦克风：关闭</string>
    <string name="cd_mic_on">麦克风：开启</string>
    <string name="cd_map">定位地图</string>
    <string name="cd_volume">扬声器音量</string>
    <string name="map_title">遥控车定位</string>
    <string name="map_close">关闭地图</string>
    <string name="label_motor_mode">电机模式</string>
    <string name="motor_builtin">内置电调</string>
    <string name="motor_external">PWM输出</string>
    <string name="label_light_mode">车灯模式</string>
    <string name="light_builtin">NMOS驱动</string>
    <string name="light_external">PWM输出</string>
    <string name="btn_rear_cam">后视</string>
    <string name="label_control_protocol">控制协议</string>
    <string name="protocol_tcp">TCP</string>
    <string name="protocol_udp">UDP</string>
</resources>